fix domain group api response swagger definition for single operations
