# priv/static/swagger.json
@@ -255,7 +255,7 @@
           },
           "200": {
             "schema": {
-              "$ref": "#/definitions/DomainGroup"
+              "$ref": "#/definitions/DomainGroupResponse"
             },
             "description": "OK"
           }
@@ -295,7 +295,7 @@
           },
           "200": {
             "schema": {
-              "$ref": "#/definitions/DomainGroup"
+              "$ref": "#/definitions/DomainGroupResponse"
             },
             "description": "OK"
           }
@@ -344,6 +344,39 @@
         "description": "Delete Domain Group"
       }
     },
+    "/domain_groups/{domain_group_id}/index_children": {
+      "get": {
+        "tags": [
+          "DomainGroup"
+        ],
+        "summary": "",
+        "responses": {
+          "400": {
+            "description": "Client Error"
+          },
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/DomainGroupsResponse"
+            },
+            "description": "OK"
+          }
+        },
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "type": "integer",
+            "required": true,
+            "name": "domain_group_id",
+            "in": "path",
+            "description": "Domain Group ID"
+          }
+        ],
+        "operationId": "TrueBGWeb.DomainGroupController.index_children",
+        "description": "List non-root Domain Groups"
+      }
+    },
     "/domain_groups/{domain_group_id}/data_domains": {
       "get": {
         "tags": [
@@ -387,7 +420,7 @@
           "400": {
             "description": "Client Error"
           },
-          "200": {
+          "201": {
             "schema": {
               "$ref": "#/definitions/DataDomain"
             },
@@ -442,31 +475,6 @@
         "parameters": [],
         "operationId": "TrueBGWeb.DomainGroupController.index_root",
         "description": "List Root Domain Group"
-      }
-    },
-    "/domain_groups/index_children": {
-      "get": {
-        "tags": [
-          "DomainGroup"
-        ],
-        "summary": "",
-        "responses": {
-          "400": {
-            "description": "Client Error"
-          },
-          "200": {
-            "schema": {
-              "$ref": "#/definitions/DomainGroupsResponse"
-            },
-            "description": "OK"
-          }
-        },
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [],
-        "operationId": "TrueBGWeb.DomainGroupController.index_children",
-        "description": "List non-root Domain Groups"
       }
     },
     "/domain_groups": {
@@ -602,7 +610,7 @@
           "400": {
             "description": "Client Error"
           },
-          "200": {
+          "204": {
             "description": "OK"
           }
         },
@@ -862,17 +870,22 @@
     },
     "DomainGroupUpdate": {
       "type": "object",
-      "required": [
-        "name"
-      ],
       "properties": {
-        "name": {
-          "type": "string",
-          "description": "domain group name"
-        },
-        "description": {
-          "type": "string",
-          "description": "domain group description"
+        "domain_group": {
+          "type": "object",
+          "required": [
+            "name"
+          ],
+          "properties": {
+            "name": {
+              "type": "string",
+              "description": "domain group name"
+            },
+            "description": {
+              "type": "string",
+              "description": "domain group description"
+            }
+          }
         }
       }
     },
@@ -939,8 +952,10 @@
         }
       },
       "example": {
+        "parent_id": 1,
         "name": "Domain group name",
-        "id": 12
+        "id": 12,
+        "description": "dg description"
       },
       "description": "A Domain Group"
     },
@@ -955,13 +970,18 @@
     "DataDomainUpdate": {
       "type": "object",
       "properties": {
-        "name": {
-          "type": "string",
-          "description": "data domain name"
-        },
-        "description": {
-          "type": "string",
-          "description": "data domain description"
+        "data_domain": {
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "string",
+              "description": "data domain name"
+            },
+            "description": {
+              "type": "string",
+              "description": "data domain description"
+            }
+          }
         }
       }
     },
@@ -975,17 +995,22 @@
     },
     "DataDomainCreate": {
       "type": "object",
-      "required": [
-        "name"
-      ],
       "properties": {
-        "name": {
-          "type": "string",
-          "description": "data domain name"
-        },
-        "description": {
-          "type": "string",
-          "description": "data domain description"
+        "data_domain": {
+          "type": "object",
+          "required": [
+            "name"
+          ],
+          "properties": {
+            "name": {
+              "type": "string",
+              "description": "data domain name"
+            },
+            "description": {
+              "type": "string",
+              "description": "data domain description"
+            }
+          }
         }
       }
     },
